# spiff-arena

./: .flake8  docker-compose-mysql.yml
.github/workflows/: docker_image_for_main_builds.yml
docs/: index.md
docs/appendices/: bpmn_references.md
docs/how_to/: complete_a_task_on_behalf_of_another_user.md  find_an_Instance_assigned_to_myself.md  find_an_Instance_assigned_to_someone_else.md  navigate_to_an_active_process_instance.md  suspend_a_process.md
docs/in_depth_topics/: data_objects.md  sub-processes_and_call_activities.md
docs/installation_integration/: configuration_settings.md
docs/learn_basics/: examples.md
k8s_configs/: spiff-arena-default-networkpolicy.yaml  spiffworkflow-backend-claim0-persistentvolumeclaim.yaml  spiffworkflow-backend-claim1-persistentvolumeclaim.yaml  spiffworkflow-backend-deployment.yaml  spiffworkflow-backend-service.yaml  spiffworkflow-connector-deployment.yaml  spiffworkflow-connector-service.yaml  spiffworkflow-db-pod.yaml  spiffworkflow-db-service.yaml  spiffworkflow-frontend-deployment.yaml  spiffworkflow-frontend-service.yaml
spiffworkflow-backend/: .flake8  .gitignore  Dockerfile  README.rst  pyproject.toml  requirements.txt
spiffworkflow-backend/lib/element-units/: Makefile  pyproject.toml
spiffworkflow-backend/lib/element-units/element_units/: __init__.py  extraction.py
spiffworkflow-backend/lib/element-units/tests/: __init__.py
spiffworkflow-backend/migrations/versions/: 6b74b7c3c3d7_.py
spiffworkflow-backend/src/spiffworkflow_backend/: api.yml  (+1 more)
spiffworkflow-frontend/src/: App.tsx  index.css  index.tsx
(+32 files in other folders)
